[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/bullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/shot/shot-2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/shot/shot-3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/shot/shot-1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/shot/shot-hit-3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/shot/shot-hit-2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/shot/shot-hit-1.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "shot",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 4.0

[node name="bullet" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shot"
playing = true

[node name="Area2D" type="Area2D" parent="." groups=["hurts"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["hurts"]]
rotation = -1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["hurts"]]
visible = false
rotation = -1.5708
shape = SubResource( 2 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
